crates/escalier_parser/src/snapshots/escalier_parser__tests__strings-4.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"\\\"a \\\\u2212 b\\\";\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 12,
                        },
                    },
                    span: 0..12,
                    kind: Lit(
                        Str(
                            Str {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 12,
                                    },
                                },
                                span: 0..12,
                                value: "a − b",
                            },
                        ),
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
