crates/escalier_parser/src/snapshots/escalier_parser__tests__strings.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(r#\"\"\";\"#)"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 3,
                    },
                },
                span: 0..3,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 2,
                            },
                        },
                        span: 0..2,
                        kind: Lit(
                            Str(
                                Str {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 2,
                                        },
                                    },
                                    span: 0..2,
                                    value: "",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
