crates/escalier_parser/src/snapshots/escalier_parser__tests__template_literals-2.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"`Hello, ${name}`\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 16,
                    },
                },
                span: 0..16,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 16,
                        },
                    },
                    span: 0..16,
                    kind: TemplateLiteral(
                        TemplateLiteral {
                            exprs: [
                                Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 10,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 14,
                                        },
                                    },
                                    span: 10..14,
                                    kind: Ident(
                                        Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 10,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 14,
                                                },
                                            },
                                            span: 10..14,
                                            name: "name",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            ],
                            quasis: [
                                TemplateElem {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 8,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 15,
                                        },
                                    },
                                    span: 1..8,
                                    raw: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 15,
                                                },
                                            },
                                            span: 1..8,
                                            value: "Hello, ",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 15,
                                                },
                                            },
                                            span: 1..8,
                                            value: "Hello, ",
                                        },
                                    ),
                                },
                                TemplateElem {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 16,
                                        },
                                    },
                                    span: 15..15,
                                    raw: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 16,
                                                },
                                            },
                                            span: 15..15,
                                            value: "",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 16,
                                                },
                                            },
                                            span: 15..15,
                                            value: "",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
